--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -16,7 +16,8 @@ CFLAGS_REMOVE_ftrace.o = -pg
 CFLAGS_REMOVE_early_printk.o = -pg
 endif
 
-KASAN_SANITIZE_head$(BITS).o := n
+#KASAN_SANITIZE_head$(BITS).o := n
+KASAN_SANITIZE := n
 
 CFLAGS_irq.o := -I$(src)/../include/asm/trace
 
